--- a/css/styles.css
+++ b/css/styles.css
@@ -215,6 +215,10 @@ header h2 {
   background-color: var(--bg-section);
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
+.projects-future {
+    text-align: center;
+    margin-top: 2rem;
+}
 .section-title {
   font-size: 1.8rem;
   margin-bottom: 1rem;
